text folder add

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<h1>GITHUB Hello!</h1>
+	GITHUB Hello!
 	<p>First</p>
+
+	<span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit excepturi ipsa, quas itaque, atque minus laboriosam, quidem sint praesentium doloribus dignissimos! Ipsa dolorum, dolore iure quia alias accusamus recusandae nemo.</span>
 </body>
 </html>
